fix(i18n): update translations and fix text display issues
- Fix missing translation for achievements page description
- Add missing translations in Russian locale
- Fix member since date formatting in profile
- Update navigation text translations
- Fix admin panel button visibility
- Fix banner upload in profile page

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "http://json.schemastore.org/package",
+  "$schema": "https://json.schemastore.org/package.json",
   "name": "mediavault",
   "version": "0.1.0",
   "private": true,
