--- a/package.json
+++ b/package.json
@@ -43,8 +43,6 @@
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.15",
-    "bufferutil": "^4.0.8",
     "chokidar": "^3.5.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -62,7 +60,6 @@
     "next": "13.5.1",
     "next-i18next": "^15.4.2",
     "next-themes": "^0.3.0",
-    "postcss": "8.4.30",
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
@@ -73,10 +70,8 @@
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
-    "utf-8-validate": "^6.0.3",
     "vaul": "^0.9.9",
     "ws": "^8.16.0",
     "zod": "^3.23.8"
@@ -89,6 +84,10 @@
     "@types/node": "^20.6.2",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.31",
+    "postcss-import": "^15.1.0",
+    "tailwindcss": "^3.3.0",
     "typescript": "^5.2.2"
   },
   "engines": {
